force-app/main/staging/objects/Staging_Field__c/Staging_Field__c.object-meta.xml
<CustomObject>
    <description>This is where the details of a staging record will be held, it will contain the field from the source and the field that it has been mapped to in Salesforce.

TODO Could include fields that are all data types so that all field values are parsed upfront</description>
    <label>Staging Field</label>
    <nameField>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Staging Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>