force-app/main/staging/objects/Staging_Field__c/fields/Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will store the boolean field value</description>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>