force-app/main/staging/objects/Staging_Field__c/fields/Datetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Value__c</fullName>
    <description>This field will store the date or date time target field values</description>
    <label>Datetime Value</label>
    <type>DateTime</type>
</CustomField>