force-app/main/staging/objects/Staging_Field__c/fields/Input_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Input_Field_Value__c</fullName>
    <description>The string value that the field that has come from the external system</description>
    <label>Input Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>