force-app/main/staging/objects/Staging_Field__c/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <description>The value field that will store number types, eg percentage, currency or numbers</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>