force-app/main/staging/objects/Staging_Field__c/fields/Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Name__c</fullName>
    <description>The API name for the field in Salesforce that this record should be migrated to</description>
    <label>Salesforce Field Name</label>
    <length>83</length>
    <type>Text</type>
</CustomField>