force-app/main/staging/objects/Staging_Field__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <formula>Staging_Header__r.Salesforce_Object__c</formula>
    <label>Salesforce Object</label>
    <type>Text</type>
</CustomField>