force-app/main/staging/objects/Staging_Field__c/fields/Staging_Header__c.field-meta.xml
<CustomField>
    <fullName>Staging_Header__c</fullName>
    <label>Staging Header</label>
    <referenceTo>Staging_Header__c</referenceTo>
    <relationshipLabel>Staging Fields</relationshipLabel>
    <relationshipName>Staging_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>