force-app/main/staging/objects/Staging_Field__c/fields/String_Value__c.field-meta.xml
<CustomField>
    <fullName>String_Value__c</fullName>
    <description>String version of the value field</description>
    <label>String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>