force-app/main/staging/objects/Staging_Field__c/fields/Time_Value__c.field-meta.xml
<CustomField>
    <fullName>Time_Value__c</fullName>
    <description>The field that will hold a time type field</description>
    <label>Time Value</label>
    <type>Time</type>
</CustomField>