force-app/main/staging/objects/Staging_Field__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>The unique id for the staging record, this will be a concatenation of the parents unique id and the field that is input, meaning that fields should be unique in every request</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>